--- a/form-page.html
+++ b/form-page.html
@@ -39,6 +39,7 @@
                     <label for="private-or-company">
                         Private or company
                     </label> <br>
+                    <div class="custom-select" style="width: 24rem;"></div>
                     <select name="private-or-company">
                         <option value="">Private</option>
                         <option value="1">Company</option>
@@ -74,6 +75,7 @@
                 </div>
                 <div>
                     <button type="submit">Submit</button>
+                    <!-- <input type="submit"> -->
                 </div>
             </div>
             <div>
@@ -81,5 +83,8 @@
             </div>
             </form>
     </div>
+    <footer>
+        Hello world
+    </footer>
     </body>
     </html>
