--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
         <h1>Om oss</h1>
         <p>Tough Viking (engelska: 'tuff viking') är ett internationellt hinderbanelopp. Tävlingen lanserades i mars 2012 och var genom det Sveriges första hinderbanelopp (OCR). Första tävlingen genomfördes 1 september 2013 på Kungliga Djurgården i Stockholm.</p>
         <br>
-        <h2>Kärnan</h2>
+        <h2>The team</h2>
     </div>
         <div class="team-container">
             <div class="team-picture">
@@ -31,27 +31,35 @@
                 <p class="team-info">Vi jobbar ständigt för att förbättra löparnas upplevelse och ge er de bästa eventen som möjligt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum obcaecati nemo laborum fuga quibusdam dolore veritatis esse sit ipsum doloribus fugit, sed nulla natus non excepturi necessitatibus dignissimos repudiandae?</p>
             </div>
         </div>
+        <div class="vd-title">
+            <h2>David Klint, VD</h2>
+        </div>
+        <div class="contact-vd">
+            <a href="tel:+46039655865"><span>☏ </span></a>
+            <a href="mailto:David.Klint@fakemail.com"><span>✉ </span></a>
+        </div>
         
-        <div class="vd-picture">
-            <h2>VD David Klint </h2>
-            <img src="./pictures/VD.jpg" alt="Bild på VD'n">
-            <div class="contact-me">
-                <a href="tel:+46039655865"><span>☏ </span>Ring mig</a> <br>
-                <a href="mailto:David.Klint@fakemail.com"><span>✉ </span>Maila mig</a>
-            </div>
-            <div class="vd-info">
+        <div class="vd-container">
+            <div class="vd-text">
                 <p class=>Efter att själv ha sprungit flera alternativa och utmanande tävlingar i bland annat USA fick jag idén till Tough viking och startade loppet 2013. Att starta en tävling låg nära till hands eftersom jag till vardags driver en eventbyrå som gör stora publika event.</p>
             </div>
+            <div class="vd-picture">
+                <img src="./pictures/VD.jpg" alt="Bild på VD'n">
+            </div>
+            <!-- <div class="contact-me">
+                <a href="tel:+46039655865"><span>☏ </span>Ring mig</a> <br>
+                <a href="mailto:David.Klint@fakemail.com"><span>✉ </span>Maila mig</a>
+            </div> -->
         </div>
     <h2 class="contact-us">Kontakta oss</h2>
     <form>
         <div class="form-container">
             <label for="name">Namn</label>
-            <input type="text" required> <br> <br>
+            <input type="text" name="name" placeholder="Your name.." required> <br> <br>
             <label for="email">Mail</label>
-            <input type="mail" required> <br> <br> <br>
+            <input type="mail" name="mail" placeholder="Email.." required> <br> <br> <br>
             <label for="message">Meddelande</label>
-            <textarea name="message" id="" cols="30" rows="10"></textarea> <br>
+            <textarea name="message" id="" cols="60" rows="10"></textarea> <br>
             <button type="submit">Skicka</button>
         </div>
     </form>
