--- a/event-page.html
+++ b/event-page.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="logo">
-        <a href="#"><img src="./pictures/banner_TV_800x240.png" alt="Company logo"></a>
+        <a href="./index.html"><img src="./pictures/banner_TV_800x240.png" alt="Company logo"></a>
     </div>
     <nav class="navbar">
         <ul>          
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./index.html">About us</a></li>
-            <li><a href="./index.html">Bookings</a></li>
+            <li><a href="./about-us.html" target="_blank">About us</a></li>
+            <li><a href="./event-page.html" target="_blank">Events</a></li>
         </ul>
     </nav>
     <div class="banner"><img src="./pictures/banner_TV_800x240.png" alt="Tough viking logo"></div>
