--- a/form-page.html
+++ b/form-page.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="logo">
-        <a href="#"><img src="./pictures/banner_TV_800x240.png" alt="Company logo"></a>
+        <a href="./index.html"><img src="./pictures/banner_TV_800x240.png" alt="Company logo"></a>
     </div>
     <nav class="navbar">
         <ul>          
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./index.html">About us</a></li>
-            <li><a href="./index.html">Bookings</a></li>
+            <li><a href="./about-us.html" target="_blank">About us</a></li>
+            <li><a href="./event-page.html" target="_blank">Events</a></li>
         </ul>
     </nav>
     <div class="banner">
@@ -45,6 +45,17 @@
                         <option value="1">Company</option>
                     </select>
                 </div>
+                <label for="shirt-size">
+                    Tshirt size (optional)
+                </label> <br>
+                <select name="Size">
+                    <option value="">None</option>
+                    <option value="1">XS</option>
+                    <option value="2">Small</option>
+                    <option value="3">Medium</option>
+                    <option value="4">Large</option>
+                    <option value="5">XL</option>
+                </select>
                 <div>
                     <label for="number-of-people">
                         Amount of people
