--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="logo">
-        <a href="#"><img src="pictures/banner_TV_800x240.png" alt="Company logo"></a>
+        <a href="./index.html"><img src="pictures/banner_TV_800x240.png" alt="Company logo"></a>
     </div>
     <nav class="navbar">
         <ul>          
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./index.html">About us</a></li>
-            <li><a href="./index.html">Bookings</a></li>
+            <li><a href="./about-us.html" target="_blank">About us</a></li>
+            <li><a href="./event-page.html" target="_blank">Events</a></li>
         </ul>
     </nav>
     <header class="header-container">
@@ -25,43 +25,48 @@
     </div>
     <div class="flex-container">
         <div class="events event-1">
-            <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+            <p class="event-info">STOCKHOLM <br>4E MAJ 2024</p>
             <div class="button-container">
                 <button class="info-button"><a href="./event-page.html" target="_blank">SIGN UP NOW ➡</a></button>
             </div>
             </div>
             <div class="events event-2">
-                <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+                <p class="event-info">GÖTEBORG<br>10E MAJ 2024</p>
                 <div class="button-container">
                     <button class="info-button"><a href="#">SIGN UP NOW ➡</a></button>
                 </div>
                 </div>
                 <div class="events event-3">
-                    <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+                    <p class="event-info">MALMÖ <br>15E MAJ 2024</p>
                     <div class="button-container">
                         <button class="info-button"><a href="#">SIGN UP NOW ➡</a></button>
                     </div>
                     </div>
                     <div class="events event-4">
-                        <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+                        <p class="event-info">SKÅNE <br>20E MAJ 2024</p>
                         <div class="button-container">
                             <button class="info-button"><a href="#">SIGN UP NOW ➡</a></button>
                         </div>
                         </div>
                         <div class="events event-5">
-                            <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+                            <p class="event-info">HUDIKSVALL <br>28e MAJ 2024</p>
                             <div class="button-container">
                                 <button class="info-button"><a href="#">SIGN UP NOW ➡</a></button>
                             </div>
                             </div>
                             <div class="events event-6">
-                                <p class="event-info">STOCKHOLMS STADION <br>4E MAJ 2024</p>
+                                <p class="event-info">LULEÅ <br>4E JUNI 2024</p>
                                 <div class="button-container">
                                     <button class="info-button"><a href="#">SIGN UP NOW ➡</a></button>
                                 </div>
                                 </div>       
     </div>
     <br><br><br><br>
+    <footer>
+        Adress: <br>
+        Mail: <br>
+        Telefon: <br>
 
+    </footer>
 </body>
 </html>
