--- a/event-page.html
+++ b/event-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event page</title>
-    <link rel="stylesheet" href="./event-page.css">
+    <link rel="stylesheet" href="./stylesheets/event-page.css">
 </head>
 <body>
     <div class="logo">
